--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Contacts">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,5 +26,13 @@
         android:dividerHeight="4dp">
 
     </ListView>
+        
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update"/>
+
+
+    </ScrollView>
 
 </RelativeLayout>
